--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-starter",
+  "name": "heroes-challenge",
   "version": "1.0.0",
-  "description": "A light foundation for your next frontend project based on webpack.",
+  "description": "Implementation of a screen design as part of a challenge for an awesome job at Digital Heroes",
   "scripts": {
     "lint": "npm run lint:styles; npm run lint:scripts",
     "lint:styles": "stylelint src",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wbkd/webpack-starter.git"
+    "url": "git+https://github.com/cymn14/heroes-challenge.git"
   },
   "keywords": [
     "webpack",
@@ -24,7 +24,7 @@
   "author": "webkid.io",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wbkd/webpack-starter/issues"
+    "url": "https://github.com/cymn14/heroes-challenge/issues"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -47,7 +47,7 @@
     "postcss-loader": "^4.1.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.8.0",
+    "stylelint": "^13.11.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "^2.1.1",
     "webpack": "^5.10.0",
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "core-js": "^3.8.1"
+    "core-js": "^3.8.1",
+    "stylelint-scss": "^3.19.0"
   }
 }
